Fix overflow issue of tables on mobile devices

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -62,6 +62,11 @@ table td.actions {
 
 // Table Hover
 
+.table-wrapper {
+  width: 100%;
+  overflow-x: auto;
+}
+
 table {
   border-collapse: collapse;
   width: 100%;
